Add automatic POJO testing and remove assertion-less test